config/k8s/app2-frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2-service
  template:
    metadata:
      labels:
        app: app2-service
    spec:
      containers:
        - name: app2-service
          image: flaviumarasescu/app2-service
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2-service
  ports:
    - name: app2-service
      protocol: TCP
      port: 3000
      targetPort: 3000
