config/k8s/list-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: list-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: list
  template:
    metadata:
      labels:
        app: list
    spec:
      containers:
        - name: list
          image: flaviumarasescu/list
---
apiVersion: v1
kind: Service
metadata:
  name: list-service
spec:
  selector:
    app: list
  ports:
    - name: list
      protocol: TCP
      port: 5000
      targetPort: 5000
