config/k8s/list-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: list-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: list-mongo
  template:
    metadata:
      labels:
        app: list-mongo
    spec:
      containers:
        - name: list-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: list-mongo-service
spec:
  selector:
    app: list-mongo
  ports:
    - name: database
      protocol: TCP
      port: 27017
      targetPort: 27017
