config/k8s/todo-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-service
  template:
    metadata:
      labels:
        app: todo-service
    spec:
      containers:
        - name: todo-service
          image: flaviumarasescu/todo-service
---
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo-service
  ports:
    - name: todo-service
      protocol: TCP
      port: 3000
      targetPort: 3000
