config/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: todo.dev
      http:
        paths:
          - path: /api/list/?(.*)
            pathType: Prefix
            backend:
              service:
                name: list-service
                port:
                  number: 5000
          - path: /api/item/?(.*)
            pathType: Prefix
            backend:
              service:
                name: item-service
                port:
                  number: 5001
          - path: /api/query/?(.*)
            pathType: Prefix
            backend:
              service:
                name: query-service
                port:
                  number: 5002
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: todo-service
                port:
                  number: 3000
